--- a/public/schoolClass/css/classMobileAssistant.css
+++ b/public/schoolClass/css/classMobileAssistant.css
@@ -92,8 +92,9 @@ body{
     bottom: 20px;
     right: 20px;
 }
-#iframeBox iframe{
+#iframeBox > iframe{
     border: none;
     width: 100%;
     height: 100vh;
 }
+
