--- a/public/schoolClass/css/classMobileAssistant.css
+++ b/public/schoolClass/css/classMobileAssistant.css
@@ -38,6 +38,8 @@ body{
 }
 .item-text{
     margin-left: 39px;
+    max-width: calc(100% - 39px);
+    display: inline-block;
 }
 .line_public{
     position: relative;
@@ -74,12 +76,48 @@ body{
 }
 .attachment_bottom{
     text-align: center;
+    height: 30px;
+    color: #666;
+    font-size: 12px;
+    line-height: 30px;
+}
+.navigate{
+    position: absolute;
+    width: 100%;
+    top: 0;
+}
+
+.attachment_list{
 }
 .nav{
-    margin-top: 10px;
-    padding-left: 8px;
-    background: #cccccc;
+    padding-left: 15px;
+    background: #288AE0;
     box-sizing: border-box;
+    height: 40px;
+    line-height: 40px;
+    padding-right: 30px;
+}
+.nav span{
+    line-height: 1;
+    display: inline-block;
+    font-size: 16px;
+    color: #fff;
+    margin-right: 8px;
+}
+.nav-back{
+    background: url("../img/icon-back.png") no-repeat;
+    width: 15px;
+    height: 15px;
+    background-size:100% 100% ;
+    display: inline-block;
+    position: absolute;
+    top: 12px;
+    right: 11px;
+}
+.text-hidden{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .add_image{
     width: 100%;
@@ -96,5 +134,23 @@ body{
     border: none;
     width: 100%;
     height: 100vh;
+}
+.courseware-open{
+    width: 48px;
+    height: 48px;
+    position: absolute;
+    bottom: 35px;
+    right: 21px;
+    background: #288AE0;
+    border-radius: 50%;
+    text-align: center;
+    line-height:48px;
+    font-size: 13px;
+    color: #fff;
+}
+.attachment-cont{
+    height: calc(100% - 40px);
+    overflow-y: auto;
+    margin-top: 40px;
 }
 
