--- a/public/schoolClass/css/classMobileAssistant.css
+++ b/public/schoolClass/css/classMobileAssistant.css
@@ -139,7 +139,7 @@ body{
     width: 48px;
     height: 48px;
     position: absolute;
-    bottom: 35px;
+    top: 35px;
     right: 21px;
     background: #288AE0;
     border-radius: 50%;
