--- a/public/schoolClass/css/classMobileAssistant.css
+++ b/public/schoolClass/css/classMobileAssistant.css
@@ -167,8 +167,8 @@ body{
 #empty{
     display:none;
     text-align: center;
-    height: 50px;
-    line-height: 50px;
+    height: 100vh;
+    line-height: 100vh;
     font-size: 18px;
     color: #cccccc;
 }
