--- a/public/schoolClass/css/login.css
+++ b/public/schoolClass/css/login.css
@@ -1,16 +1,58 @@
+body,html{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 .content{
     position: relative;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: url("../img/icon_yunBg.png") no-repeat;
+    background-size: cover;
 }
 .login_box{
     position: absolute;
-    width: 350px;
-    height: 300px;
-    background: blue;
+    width: 452px;
+    height: 430px;
+    background: white;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     overflow: hidden;
+    padding: 0 35px;
+    box-sizing: border-box;
+}
+.logo{
+    font-size: 28px;
+    color: #666;
+    font-weight: bold;
+    margin: 37px 0 48px;
+    text-align: center;
+
+}
+.my_flex{
+    -webkit-display: flex;
+    -moz-display: flex;
+    -ms-display: flex;
+    -o-display: flex;
+    display: flex;
+}
+.logo img{
+    width: 48px;
+    margin-right: 12px;
+    vertical-align: text-bottom;
+}
+.tab{
+    color: #1A58FB;
+    font-size: 19px;
+    cursor: pointer;
+}
+.tab > div{
+    width: 50%;
+    text-align: center;
+    padding-bottom: 15px;
 }
 .right_font{
     width: 100px;
@@ -21,33 +63,71 @@
     right: 0;
     transform: translate(50%,-50%) rotate(45deg);
 }
+input{
+    border: 1px #D2D2D2 solid;
+    line-height: 20px;
+    padding: 11px 15px;
+    margin-bottom: 24px;
+    outline: none;
+    width: 100%;
+    box-sizing: border-box;
+}
+input:focus{
+    box-shadow: 0px 0px 2px #215bef8a;
+    border-color: #1757FB;
+}
+input#act{
+    margin-top: 30px;
+}
+#login{
+    line-height: 48px;
+    height: 48px;
+    background-color: #4285F4;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    outline: none;
+    border: 0;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+}
+#login:hover{
+    opacity: 0.9;
+}
 .font{
     position: absolute;
     bottom:10px;
     right: 50%;
     z-index: 10;
     transform: translate(50%,0%) rotate(-45deg);
+    -weibkit-transform:translate(50%,0%) rotate(-45deg);
 }
 
 .active{
-    border-bottom: 1px solid red;
+    border-bottom: 1px solid #1757FB;
+    position: relative;
 }
-#account{
-    width: 50%;
-    box-sizing: border-box;
-    display: inline-block;
-    text-align: center;
+.active::before{
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: -5px;
+    border-left: 1px #1757FB solid;
+    border-bottom: 1px #1757FB solid;
+    width: 8px;
+    height: 8px;
+    background-color: #fff;
+    transform: translateX(-50%) rotate(135deg);
+    -weibkit-transform: translateX(-50%) rotate(135deg);
 }
-#scan{
-    width: 48%;
-    box-sizing: border-box;
-    display: inline-block;
-    text-align: center;
-}
+
 #scan_image{
-    width: 200px;
-    height: 200px;
+    width: 210px;
+    height: 210px;
 }
 .scan{
     display: none;
+    text-align: center;
+    margin-top: 22px;
 }
