--- a/public/schoolClass/css/syncClassroom.css
+++ b/public/schoolClass/css/syncClassroom.css
@@ -51,6 +51,9 @@ body{
     padding-left: 45px;
     margin-top: 45px;
 }
+.left_box > div:last-child{
+    margin-top: 20px;
+}
 .right_box{
     width: calc(100% - 180px);
     height: 100%;
