--- a/public/schoolClass/css/syncClassroom.css
+++ b/public/schoolClass/css/syncClassroom.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     border: 0;
-    /*overflow: hidden;*/
+    font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
 }
 
 .wrap {
