--- a/public/schoolClass/css/login.css
+++ b/public/schoolClass/css/login.css
@@ -1,8 +1,9 @@
 body,html{
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
+    font-family: "Helvetica Neue","Microsoft Yahei",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 .content{
     position: relative;
@@ -72,6 +73,7 @@ input{
     outline: none;
     width: 100%;
     box-sizing: border-box;
+    font-family: "Helvetica Neue","Microsoft Yahei",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 input:focus{
     box-shadow: 0px 0px 2px #215bef8a;
@@ -92,6 +94,7 @@ input#act{
     cursor: pointer;
     font-size: 16px;
     margin-top: 50px;
+    font-family: "Helvetica Neue","Microsoft Yahei",Helvetica,Arial,"Hiragino Sans GB","Heiti SC","WenQuanYi Micro Hei",sans-serif;
 }
 #login:hover{
     opacity: 0.9;
