--- a/public/schoolClass/css/syncClassroom.css
+++ b/public/schoolClass/css/syncClassroom.css
@@ -4,7 +4,22 @@ body {
     border: 0;
     font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial;
 }
+::-webkit-scrollbar {
+    width: 8px;
+    height: 12px;
+}
 
+/* 这是针对缺省样式 (必须的) */
+::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 9px;
+    -webkit-border-radius: 9px;
+}
+
+/* 滑块颜色 */
+::-webkit-scrollbar-button {
+    background-color: initial;
+}
 .wrap {
     width: 100%;
     height: 100%;
