--- a/public/schoolClass/css/syncClassroom.css
+++ b/public/schoolClass/css/syncClassroom.css
@@ -161,7 +161,7 @@ body {
 .right_box {
     width: calc(100% - 180px);
     height: 100%;
-    background: lightblue;
+    background: #ECEFF8;
     float: left;
     overflow: hidden;
 }
