--- a/public/schoolClass/css/live.css
+++ b/public/schoolClass/css/live.css
@@ -1,7 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
 html,body,div,span,h1,h2,h3,h4,h5,h6,p,pre,a,code,em,img,small,strong,sub,sup,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label{	
-	margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent
+	margin:0;
+    padding:0;
+    border:0;
+    outline:0;
+    font-size:100%;
+    vertical-align:baseline;
+    background:transparent;
+    font-family: "Microsoft YaHei", "Hiragino Sans GB", Helvetica, Arial !important;
 	}
 	button, a, input{
 	outline:none;
