--- a/public/elearnigClass/css/home.css
+++ b/public/elearnigClass/css/home.css
@@ -25,7 +25,8 @@ body {
 .out_warp{
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right,#1DE5E2 0%,#004ED0 100%);
+    background: url("../img/icon_yunBg.png") no-repeat;
+    background-size: 100% 100%;
     /*filter:blur(2px);*/
 }
 .out_warp:after{
@@ -43,7 +44,7 @@ body {
 .wrap {
     width: 80%;
     height: 80%;
-    background: url("../img/icon_yunBg.png") no-repeat;
+
     background-size: cover;
     position: relative;
     top: 50%;
