--- a/public/elearnigClass/css/home.css
+++ b/public/elearnigClass/css/home.css
@@ -299,6 +299,25 @@ body {
     display: none;
     overflow: auto;
 }
+.review{
+    width: 500px;
+    height: 400px;
+    background: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 6px 31px 0px rgba(0, 0, 0, 0.39);
+    z-index: 201;
+    display: none;
+    overflow: auto;
+}
+.review iframe{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 .mask {
     width: 100%;
