--- a/public/elearnigClass/css/createClass.css
+++ b/public/elearnigClass/css/createClass.css
@@ -9,6 +9,7 @@ body,html{
     overflow: hidden;
     padding: 15px  20px 15px  30px;
     position:relative;
+    height: 34px;
 }
 .topDiv:after{
     position: absolute;
@@ -148,24 +149,106 @@ body,html{
     letter-spacing: 0.5px;
 }
 .left_image{
-    width: 30%;
+    width: 158px;
     display: inline-block;
+    height: 112px;
+    border: 1px solid #e5e5e5;
+    text-align: center;
+    float: left;
 }
 .middle_content{
-    width: 58%;
+    width: calc(100% - 325px);
     display: inline-block;
-
+    margin-left: 15px;
 }
 .right_oper{
-    width: 10%;
+    width: 150px;
     display: inline-block;
-
+    float: right;
+    text-align: right;
+}
+.right_oper div span{
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    cursor: pointer;
+}
+.right_oper .live{
+    background: url("../img/aBa-liveH.png") no-repeat;
+    background-size: 32px;
+    margin-bottom: 6px;
+}
+.right_oper .editor{
+    background: url("../img/aBa-editor.png") no-repeat;
+    background-size: 32px;
+    margin-bottom: 6px;
+}
+.right_oper .editor:hover{
+    background: url("../img/aBa-editorH.png") no-repeat;
+    background-size: 32px;
+}
+.right_oper .del{
+    background: url("../img/aBaDel.png") no-repeat;
+    background-size: 32px;
+}
+.right_oper .del:hover{
+    background: url("../img/aBa-delH.png") no-repeat;
+    background-size: 32px;
 }
 .left_image > img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 .list{
     overflow: auto;
-    height: 500px;
+    padding: 10px 33px 0 31px;
+    height: calc(100% - 74px);
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.list_item{
+    background: #fff;
+    padding: 12px 15px 12px 10px;
+    margin-bottom: 14px;
+    height: 114px;
+    border-radius:4px;
+}
+.course-title{
+    color: #333;
+    font-size: 18px;
+    line-height: 1;
+    margin-bottom: 20px;
+}
+.course-tagBlue{
+    color: #4285F4;
+    border: 1px solid #4285F4;
+    border-radius: 4px;
+    line-height: 1;
+    font-size: 14px;
+    height: 14px;
+    display: inline-block;
+    padding: 2px 6px;
+    margin-left: 15px;
+}
+.course-listText{
+    margin-bottom: 15px;
+    line-height:1;
+    font-size:14px;
+}
+.course-Light_grey{
+    color: #888;
+}
+.course-Dark_grey{
+    color: #333;
+    margin-left: 12px;
+}
+.public-textHidden{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    white-space: nowrap;
+}
+.course-titleText{
+    max-width: 86%;
 }
