--- a/public/elearnigClass/css/home.css
+++ b/public/elearnigClass/css/home.css
@@ -273,8 +273,8 @@ body {
 
 /*新建课堂模块*/
 .class_createContent {
-    width: 500px;
-    height: 400px;
+    width: 629px;
+    height: 569px;
     background: white;
     position: absolute;
     top: 50%;
@@ -287,8 +287,8 @@ body {
 }
 
 .chapter_createContent{
-    width: 500px;
-    height: 400px;
+    width: 616px;
+    height: 590px;
     background: white;
     position: absolute;
     top: 50%;
@@ -298,6 +298,69 @@ body {
     z-index: 200;
     display: none;
     overflow: auto;
+}
+.schedule_content_chapter{
+    height: 452px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding:30px 30px 0 30px;
+    font-size: 12px;
+    line-height: 1.5;
+    font-size: 14px;
+}
+.schedule_content_chapter span{
+    display: inline-block;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+.schedule_content_chapter .name{
+    width: 46%;
+}
+.schedule_content_chapter .teacher{
+    width: 20%;
+}
+.schedule_content_chapter .operation{
+    width: 10%;
+}
+.schedule_footer {
+    text-align: center !important;
+    padding: 16px 0 !important;
+    border: none;
+}
+
+.chapterContent_chapter{
+    font-size: 16px;
+    margin-bottom: 12px;
+    color: #333;
+}
+.Course-schedule_time{
+    color: #aaa;
+    font-size: 14px;
+    line-height: 25px;
+}
+.table_title_chapter {
+    background: #f9f9f9;
+    padding: 6px 8px;
+    color: #0078e4;
+    margin-top: 8px;
+}
+.table_data_chapter{
+    color: #666;
+    font-size: 14px;
+}
+.table_data_chapter .list_item{
+    padding: 10px 8px;
+    border-bottom: 1px solid #e9e9e9;
+    line-height: 1;
+}
+.table_data .list_item{
+    padding: 10px 8px;
+    line-height: 1;
+    font-size: 14px;
+}
+.table_data .list_item span{
+    display: inline-block;
 }
 .review{
     width: 500px;
@@ -333,23 +396,153 @@ body {
 }
 
 .createNav {
+    padding: 0 20px 0 16px;
+    height: 42px;
+    line-height: 42px;
+    border-bottom: 1px solid #eee;
+    font-size: 14px;
+    color: #333;
     overflow: hidden;
-    border-bottom: 1px solid #ccc;
+    background-color: #F8F8FA;
+    border-radius: 2px 2px 0 0;
+}
+.create-content, .schedule_content{
+    padding: 30px 15px 0 15px;
+    font-size: 14px;
+    color: #666;
+}
+.schedule_content{
+    height: 260px;
+    overflow-y: auto;
+}
+.create-content .create-contentLeft,  .schedule_content .create-contentLeft{
+    margin-right: 25px;
+    display: inline-block;
+    vertical-align: top;
+    line-height: 1;
+    padding-top: 2px;
+}
+.create-contentList, .bottom-15{
+    margin-bottom: 15px;
+}
+.create-contentList .image_box{
+    display: inline-block;
+}
+.create-contentList button.uploadImage, button.add-class{
+    background: #2dbe60 !important;
+    border: 1px solid #2dbe60 !important;
+    padding: 4px 8px !important;
+    color: #fff;
+    outline: none;
+    cursor: pointer;
+}
+.add-class{
+    display: block;
+    width: 100%;
+    font-size: 14px;
+}
+.create-contentList textarea{
+    border-color: #d9d9d9;
+    margin: 0;
+    padding: 0;
+    width: 400px;
+    color: #666;
+}
+.table-right{
+    width: calc(100% - 86px);
+    display: inline-block;
+}
+.table_title{
+    background: #f9f9f9;
+    padding: 8px;
+}
+.table_title span{
+    display: inline-block;
+}
+.table_title_number{
+    width: 50px;
+}
+.table_title_numberT{
+   padding-left: 8px;
+    width: 42px;
+}
+.table_title_name{
+    width: 150px;
+}
+.table_title_teacher{
+    width: 100px;
+}
+.table_title_time{
+    width: 100px;
+}
+.table_title_del{
+    width: 50px;
+}
+.table_title_del i{
+    display: inline-block;
+    background: url("../img/aBa-del.png") no-repeat;
+    width: 13px;
+    height:12px;
+}
+.table_data .table_title{
+    background: #fff;
+}
+.submit-btn{
+    text-align: center;
+}
+.submitBlue{
+    background: #4285F4;
+    border-radius: 2px;
+    border: none !important;
+    color: #fff;
+    font-size: 14px;
+    padding: 6px 21px;
+    outline: none;
+    cursor: pointer;
+}
+input, textarea{
+    -web-kit-appearance:none;
+    -moz-appearance: none;
+    outline: none;
+    resize:none
+}
+.c-datepicker-date-editor{
+    -webkit-appearance: none;
+    background-color: #fff;
+    background-image: none;
+    border-radius: 4px;
+    border: 1px solid #dcdfe6;
+    box-sizing: border-box;
+    color: #666;
+    outline: none;
+    padding: 2px 4px !important;
+    font-size: 12px !important;
 }
 
 .createLeft {
     float: left;
 }
-
+.release{
+    text-align: right;
+}
 .createRight {
     float: right;
     cursor: pointer;
+}
+.createRight i{
+    display: inline-block;
+    width: 12px;
+    height:12px;
+    background: url("../img/aBa-close.png") no-repeat;
+    background-size: 12px;
 }
 .class_image{
     width: 10px;
     height: 10px;
 }
-
+.setUp-Left{
+    padding-top:10px !important
+}
 .calendar { POSITION: absolute; WIDTH:190px; HEIGHT: 180px; PADDING:0;DISPLAY: none; FLOAT: left;border:1px solid #819dba;background:#fff;}
 .calendar .calMain { WIDTH:100%; HEIGHT:180px; FLOAT: left; OVERFLOW: hidden; POSITION: absolute; }
 .calendar .calMain .calTitle { WIDTH: 100%; FLOAT: left; HEIGHT: 23px; BACKGROUND: #fff; OVERFLOW: hidden; }
