--- a/public/elearnigClass/css/createClass.css
+++ b/public/elearnigClass/css/createClass.css
@@ -220,9 +220,7 @@ body,html{
     line-height: 1;
     margin-bottom: 20px;
 }
-.course-tagBlue{
-    color: #4285F4;
-    border: 1px solid #4285F4;
+.course-tagBlue, .course-tagOrange{
     border-radius: 4px;
     line-height: 1;
     font-size: 14px;
@@ -230,6 +228,14 @@ body,html{
     display: inline-block;
     padding: 2px 6px;
     margin-left: 15px;
+}
+.course-tagBlue{
+    color: #4285F4;
+    border: 1px solid #4285F4;
+}
+.course-tagOrange{
+    color: #F26C00;
+    border: 1px solid #F26C00;
 }
 .course-listText{
     margin-bottom: 15px;
